# FreeMacros

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deployment/: macro_deployment.yaml
macros/: __init__.py  create_technical_drawing.py  export_files.py  take_pictures.py
scripts/: convert_files.py  convert_files.sh
