[tool.poetry]
name = "freecadmacros"
version = "0.1.0"
description = "FreeCAD Macros"
authors = ["yeyeto2788 <juanernestobiondi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
